--- a/index.html
+++ b/index.html
@@ -1,33 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Huddle landing page with single introductory section</title>
+  <link rel="icon" href="./images/favicon.png">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Page Huddle</title>
+
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
+
 <body>
+  <header class="header">
+    <img class="header__logo" src="./images/logo.svg" alt="Logotipo">
+  </header>
 
-  Build The Community Your Fans Will Love
+  <main class="main">
+    <section class="main__containerimage">
+      <img src="./images/illustration.svg" alt="" class="main__containerimage-image">
+    </section>
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
+    <section class="main__description">
+      <h1 class="main__description-title">Build The Community Your Fans Will Love</h1>
+      <p class="main__description-paragraph">Huddle re-imagines the way we build communities. You have a voice, but so
+        does your audience. Create connections with your users as you engage in genuine discussion.</p>
+      <button class="main__description-button">Register</button>
+    </section>
 
-  Register
+    <section class="main__icon">
+      <picture class="main__icon-facebook"></picture>
+      <picture class="main__icon-twitter"></picture>
+      <picture class="main__icon-instagram"></picture>
+    </section>
+  </main>
 
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+  <!--   Autores  -->
+  <footer class="footer">
+    <h2 class="footer__atributos">Challenge by</h2>
+    <a class="footer__atributos-enlace" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend
+      Mentor</a>
+    <h2 class="footer__atributos">Coded by</h2>
+    <a class="footer__atributos-enlace" href="https://www.frontendmentor.io/profile/leooportilla"
+      target="_blank">Leonardo Portilla</a>
+
 </body>
+
 </html>
